@startuml

class App{
main()
start()
}

class Item{
name : String
id : String
value : BigDecimal
idList : ArrayList<String>

setName()
getName()
setID()
getID()
setValue()
getValue()
validateUniqueID()
}

class List{
items[] : ObservableList

getList()
addItem()
removeItem()
getIDs()
}

class FileManager{
promptSaveFile()
promptOpenFile()
writeToFile()
readFromFile()
}

class ListManager{
itemList : List
tableView : TableView<Item>
priceColumn : TableColumn<Item, String>
idColumn : TableColumn<Item, String>
nameColumn : TableColumn<Item, String>
nameField : TextField
idField: TextField
valueField : TextField
searchField : TextField

addButtonIsClicked(ActionEvent actionEvent)
removeButtonIsClicked((ActionEvent actionEvent)
searchButtonIsClicked(ActionEvent actionEvent)
openButtonIsClicked(ActionEvent actionEvent)
saveButtonIsClicked(ActionEvent actionEvent)
updateButtonIsClicked(ActionEvent actionEvent)
updateColumns()
update()
clearText()
}

javafx.Application <|- App
App *-- List
List o-- Item
ListManager - Item
FileManager - ListManager

@enduml